maybe fixed extra space on mobile? prob not downt happen in simulated phone just my real phone ya

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@
     }
 
 .project{
-    max-width: 42.5em;
+    width: 42.5em;
     height: 22em;
     background-color: rgb(220, 220, 220);
     border-top-left-radius: 1%;
